create default storage classes for cstor. Use per-service storage class for citus and nfs

--- a/Charts/citus-postgresql/templates/statefulset_worker.yaml
+++ b/Charts/citus-postgresql/templates/statefulset_worker.yaml
@@ -180,7 +180,7 @@ spec:
       name: pgdata
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ .Values.worker.persistence.storageClassName }}
+      storageClassName: {{ .Values.persistence.storageClass | quote }}
       resources:
         requests:
           storage: {{ .Values.worker.persistence.size }}
