--- a/Charts/nfs/values.yaml
+++ b/Charts/nfs/values.yaml
@@ -45,8 +45,8 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  storageClass: "cstor-csi-stripe"
-
+  storageClass: "neon-internal-nfs"
+  replicaCount: 3 
   accessMode: ReadWriteOnce
   size: 16Gi
 
