--- a/Charts/cortex/templates/deployment.yaml
+++ b/Charts/cortex/templates/deployment.yaml
@@ -52,6 +52,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - "-config.file=/etc/cortex/cortex.yaml"
+            - "-config.expand-env"
             - "-log.level=info"
             - "-log.format=json"
             - "-validation.max-label-names-per-series=100"
