--- a/Charts/cortex/values.yaml
+++ b/Charts/cortex/values.yaml
@@ -6,7 +6,7 @@ image:
   organization: neon-system-registry
   repository: cortexproject-cortex
   tag: v1.6.0
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 serviceAccount:
   create: true
@@ -26,11 +26,16 @@ cortexConfig:
 
   server:
     http_listen_port: 9009
+    http_listen_address: 0.0.0.0
+    grpc_listen_port: 9095
+    grpc_listen_address: 0.0.0.0
 
     # Configure the server to allow messages up to 100MB.
     grpc_server_max_recv_msg_size: 104857600
     grpc_server_max_send_msg_size: 104857600
     grpc_server_max_concurrent_streams: 1000
+    grpc_server_min_time_between_pings: 10s
+    grpc_server_ping_without_stream_allowed: true
 
   distributor:
     shard_by_all_labels: true
@@ -49,6 +54,18 @@ cortexConfig:
     max_series_per_user: 0
     max_metadata_per_user: 0
     max_metadata_per_metric: 100
+  blocks_storage:
+    backend: s3
+    tsdb:
+      dir: /tmp/cortex/tsdb
+    bucket_store:
+      sync_dir: /tmp/cortex/tsdb-sync
+    s3:
+      bucket_name: cortex
+      endpoint: neon-metrics-minio:9000
+      access_key_id: ${ACCESS_KEY_ID}
+      secret_access_key: ${SECRET_ACCESS_KEY}
+      insecure: true
 
   ingester:
     lifecycler:
@@ -69,38 +86,27 @@ cortexConfig:
             endpoints:
               - neon-metrics-etcd:2379
         replication_factor: 3
-
-  # Use yugabyte as storage -for both index store and chunks store.
-  schema:
-    configs:
-    - from: 2019-07-29
-      store: cassandra
-      object_store: cassandra
-      schema: v10
-      index:
-        prefix: index_
-        period: 24h
-      chunks:
-        prefix: chunk_
-        period: 24h
-
   storage:
-    boltdb:
-      directory: /tmp/cortex/index
-    filesystem:
-      directory: /tmp/cortex/chunks
-    delete_store:
-      store: boltdb
-    cassandra:
-      addresses: neon-metrics-db-yb-tservers # configure yugabyte addresses here.
-      keyspace: cortex   # configure desired keyspace here.
-      timeout: 15s
-      connect_timeout: 15s
-      max_retries: 5
-
-  table_manager:
-    retention_deletes_enabled: true
-    retention_period: 48h
+    engine: blocks
+  frontend_worker:
+    match_max_concurrent: true
+    frontend_address: 0.0.0.0:9095
+  ruler:
+    enable_api: true
+    enable_sharding: false
+    ring:
+      kvstore:
+        store: inmemory
+    storage:
+      type: local
+      local:
+        directory: /tmp/cortex/rules
+  compactor:
+    data_dir: /tmp/cortex/compactor
+    sharding_ring:
+      kvstore:
+        store: inmemory
+     
 
 
 
@@ -121,18 +127,12 @@ tolerations:
     operator: Exists
     effect: NoSchedule
 
-resources:
-  limits:
-    cpu: 1
-    memory: 1Gi
-  requests:
-    cpu: 100m
-    memory: 256Mi
+resources: {}
 
 podAnnotations:
   prometheus.io/scrape: "true"
   prometheus.io/port: "http-metrics"
-  readiness.status.sidecar.istio.io/applicationPorts: '9009'
+  readiness.status.sidecar.istio.io/applicationPorts: '9009,9095'
 
 podLabels: {}
 
@@ -140,7 +140,21 @@ terminationGracePeriodSeconds: 2400
 
 extraVolumes: {}
 
-env: []
+env:
+  - name: POD_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.podIP
+  - name: ACCESS_KEY_ID
+    valueFrom:
+      secretKeyRef:
+        name: neon-metrics-minio
+        key: accesskey
+  - name: SECRET_ACCESS_KEY
+    valueFrom:
+      secretKeyRef:
+        name: neon-metrics-minio
+        key: secretkey
 
 securityContext: {}
 
